--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "doleotwitchbot",
   "version": "0.0.0",
   "description": "A Twitch Moderator Bot",
-  "main": "index.js",
+  "main": "src",
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Doleo",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "esm": "^3.2.25",
+    "yarn": "^1.22.17"
+  }
 }
